# ChurnPrediction

./: .gitignore  README.md  README1.md  mynotebook.ipynb  niconotebook.ipynb  pyproject.toml  requirements.txt
app/: pipeline_functions.py
model/: model.pkl
model/preprocessing/: preprocessor.pkl
model/saved_model/: fingerprint.pb  saved_model.pb
model/saved_model/variables/: variables.data-00000-of-00001  variables.index
notebook/: davidnotebook.ipynb
notebooks/: davidnotebook.ipynb  niconotebook.ipynb  pipeline_functions.py  reloadingnicomodel.ipynb
notebooks/checkpoints/: churn_best.keras
notebooks/logs/fit/20250526-101834/train/: events.out.tfevents.1748247514.nicolascassonnet-ThinkPad-P53.26768.0.v2
notebooks/logs/fit/20250526-101834/validation/: events.out.tfevents.1748247515.nicolascassonnet-ThinkPad-P53.26768.1.v2
notebooks/logs/fit/20250526-110637/train/: events.out.tfevents.1748250397.nicolascassonnet-ThinkPad-P53.30872.0.v2
notebooks/logs/fit/20250526-110637/validation/: events.out.tfevents.1748250398.nicolascassonnet-ThinkPad-P53.30872.1.v2
notebooks/logs/fit/20250526-112258/train/: events.out.tfevents.1748251378.nicolascassonnet-ThinkPad-P53.33204.0.v2
src/: confusion_matrix.py  deeplmodel.py  model_training_graphics.py  pipeline_functions.py  regression_logistic.py  shap_values.py
src/churnprediction/: __init__.py  another_module.py  pipeline_functions.py  truc.py
src/churnprediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+33 files in other folders)
