[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "churnprediction"
version = "0.1.0"
description = "Package for churn prediction"
readme = "README1.md"
requires-python = ">=3.8"
dependencies = [
    "pandas", 
    "numpy",
    "tensorflow",
    "tensorflow-cpu",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "xgboost",
    "shap",
    "keras_tuner",
    "tensorboard"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]